--- a/Login.html
+++ b/Login.html
@@ -16,9 +16,9 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="Enter your password" required>
 
-        <!-- <button type="submit">Login</button><br><br> -->
-        <a href="Dashboard.html" >Login</a><br><br>
-			<a href="forgot.html" >Forgot Password/Username </a><br><br>
+        <button type="submit">Login</button><br><br>
+	<a href="forgot.html" >Forgot Password/Username </a><br><br>
+	      
       </form>
   </body>
 </html>
